add p-accordion on employees; import css on style.css

--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -2,4 +2,15 @@
   <h1>
      {{title}}
   </h1>
+  <p-accordion [activeIndex]="index">
+    <p-accordionTab header="Alice">
+      A kind, brave and independent girl, always naive, curious and young heart. like playing the piano, reading books and exercising.I major in Computer Network Technology.
+    </p-accordionTab>
+    <p-accordionTab header="Alex">
+      An optimistic, honest and positive boy. Strong, athletic, smart and excellent.He likes playing basketball, reading books and exercising. He majors in English.
+    </p-accordionTab>
+    <p-accordionTab header="Acsah">
+      The girl with the blessing who love english and programming.
+    </p-accordionTab>
+  </p-accordion>
 </div>
