--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class='wrap'>
-  <app-employees></app-employees>
+  <!-- <app-employees></app-employees> -->
 </div>
 
 
